--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
+# Virtual environment
 venv/
+
+# Environment variables
 .env
+
+# Python cache files
 __pycache__/
+*.pyc
+
+# Flask instance folder
 instance/
+
+# SQLite database
+*.sqlite3
+db.sqlite3
+
